[package]
name = "hobo_css"
version = "1.0.0-rc.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/zygomedia/hobo"
description = "hobo is a Rust frontend framework"
authors = ["Zygo Media <contact@zygomedia.com>"]
readme = "../README.md"

[dependencies]
# dyn-clone = "1"
# dyn_partial_eq = "0.1"
hobo_css_macros = { path = "../hobo_css_macros", version = "=1.0.0-rc.1" }
num-traits = "0.2"
ordered-float = { version = "5", default-features = false }
paste = "1"
smart-default = "0.7"
strum = { version = "0.27", features = ["derive"] }

[lints]
workspace = true
